--- a/OdeFood/Views/Home/Details.cshtml
+++ b/OdeFood/Views/Home/Details.cshtml
@@ -1,5 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model OdeFood.Mdoels.Restaurant
+
+
+
+
+
+    <h1>@Model.Name</h1>
+
+    <div>... details ... </div>
