--- a/OdeFood/Views/Home/Index.cshtml
+++ b/OdeFood/Views/Home/Index.cshtml
@@ -1,5 +1,26 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model OdeFood.ViewModels.HomeIndexViewModel
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+</head>
+<body>
+    <table>
+        @foreach (var restaurant in Model.Restaurants)
+        {
+            <tr>
+                <td>
+                    @restaurant.ID
+                </td>
+                <td>
+                    @restaurant.Name
+                </td>
+            </tr>
+
+
+        }
+
+
+    </table>
+</body>
+</html>
