create new restaurant model ,,, not ended ,,,,,make first POST to DB

--- a/OdeFood/Views/Home/Details.cshtml
+++ b/OdeFood/Views/Home/Details.cshtml
@@ -4,6 +4,10 @@
 
 
 
-    <h1>@Model.Name</h1>
+<h1>@Model.Name</h1>
 
-    <div>... details ... </div>
+<div>... details ... </div>
+<a asp-action="Index" asp-controller="Home">Back Home</a>
+
+
+
