Add restaurant to db if u have (2/2) complete

--- a/OdeFood/Views/Home/Details.cshtml
+++ b/OdeFood/Views/Home/Details.cshtml
@@ -6,7 +6,16 @@
 
 <h1>@Model.Name</h1>
 
-<div>... details ... </div>
+<div>
+    Id: @Model.Name
+
+    ... details ...
+</div>
+<div>
+    Cuisine: @Model.TypeFood
+</div>
+
+
 <a asp-action="Index" asp-controller="Home">Back Home</a>
 
 
