--- a/OdeFood/Views/_ViewImports.cshtml
+++ b/OdeFood/Views/_ViewImports.cshtml
@@ -1,2 +1,9 @@
-﻿@namespace OdeFood.Views
+﻿@using OdeFood.Mdoels
+@using OdeFood.ViewModels
+@using OdeFood.Pages
+@namespace OdeFood.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    /// if u add using statement in this file, after that is is not necesary to declare it in all views
+    /// for example /// @using OdeFood.Model   namespaces.
+}
